# zokka-compiler

./: .gitignore  CREATING_A_NEW_PACKAGE_FOR_PACKAGE_OVERRIDES.md  CUSTOM_PACKAGE_SERVER_REFERENCE_NOTES.md  DECISIONS.md  DESIGN_CHOICES.md  ELM_PACKAGE_SERVER_API.md  FAQs.md  FIXED_BUGS.md  GOVERNANCE.md  ODDITIES_IN_COMPILER.md  QUESTIONS.md  QUICK_START_PUBLISH_PACKAGE.md  README.md  REASONING.md  cabal.project  cabal.project.freeze.ghc92  cabal.project.freeze.ghc94  cabal.project.freeze.ghc96  cabal.project.freeze.ghc_9_6_7  cabal.project.freeze.ghc_9_8_4  cabal.project.prod  elm.cabal  hie.yaml  publish-to-npm.py  run-benchmarks.py  run-compiler-output-tests.py  run-custom-repo-tests.py  run-test-rs-tests.py  zelm-custom-package-repository-config.json
.github/: ISSUE_TEMPLATE.md
.github/workflows/: haskell.yml  release.yml
builder/src/: BackgroundWriter.hs  Build.hs  File.hs  Http.hs  Stuff.hs
builder/src/Elm/: CustomRepositoryData.hs  Details.hs  Outline.hs  OutlineConstants.hs  PackageOverrideData.hs
builder/src/Logging/: Logger.hs
builder/src/Reporting/: Exit.hs
compiler-output-tests/: elm.json
compiler-output-tests/expect-failed-compilation/src/: BadOccursCheck.elm  BadOccursCheck1.elm  BadOccursCheck2.elm
compiler-output-tests/expect-successful-compilation/src/: BasicExample.elm
compiler-output-tests/src/: BadOccursCheck1.elm
compiler/src/AST/: Canonical.hs  Optimized.hs  Source.hs
compiler/src/AST/Utils/: Binop.hs  Shader.hs
compiler/src/Data/: Index.hs  Name.hs  NonEmptyList.hs  OneOrMore.hs  Utf8.hs
compiler/src/Data/Map/: Utils.hs
compiler/src/Elm/: Constraint.hs  CustomRepositoryData.hs  Interface.hs  Kernel.hs  Licenses.hs  ModuleName.hs  Package.hs  PackageOverrideData.hs  Version.hs
compiler/src/Elm/Compiler/Type/: Extract.hs
compiler/src/Generate/: JavaScript.hs  Mode.hs
compiler/src/Generate/JavaScript/: Builder.hs  Expression.hs  Name.hs
compiler/src/Json/: Decode.hs  Encode.hs
compiler/src/Nitpick/: Debug.hs  PatternMatches.hs
compiler/src/Optimize/: DecisionTree.hs  Expression.hs
compiler/src/Parse/: Module.hs  Primitives.hs  String.hs  Symbol.hs
compiler/src/Reporting/: Annotation.hs  Doc.hs  Error.hs
compiler/src/Reporting/Error/: Canonicalize.hs  Docs.hs  Import.hs  Main.hs  Syntax.hs  Type.hs
compiler/src/Reporting/Render/Type/: Localizer.hs
compiler/src/Type/: Error.hs  Occurs.hs  Solve.hs  Type.hs  Unify.hs  UnionFind.hs
custom-package-server/: .gitignore  CHANGELOG.md  LICENSE  cabal.project.freeze  endpoints.md  example_curl.sh  example_test.py  initialize_db.sh  initialize_tables.sql  myPackage.cabal  tables.md
custom-package-server/elm-src/: .gitignore  build.sh  elm.json  index.html  package-lock.json  package.json
custom-package-server/elm-src/assets/: dark.css  style.css
custom-package-server/elm-src/assets/help/: design-guidelines.md
custom-package-server/elm-src/frontend/: Href.elm  Main.elm  Release.elm  Session.elm  Skeleton.elm
custom-package-server/elm-src/frontend/Page/: Diff.elm  Docs.elm  Help.elm  Problem.elm  Search.elm
custom-package-server/elm-src/frontend/Page/Docs/: Block.elm
custom-package-server/elm-src/frontend/Page/Search/: Entry.elm
custom-package-server/elm-src/frontend/Utils/: AuthTokenId.elm  DictUtils.elm  HttpHelpers.elm  LoginUpdate.elm  Logo.elm  NonEmptyList.elm  PermissionLevel.elm  Popularity.elm  RepositoryId.elm  RepositoryName.elm  RepositoryUrlSafeName.elm  Source.elm
custom-package-server/src/: Main.hs
custom-package-server/test-data/: example-package.txt
custom-repo-tests/: packages-to-mirror.json
custom-repo-tests/mirror/: all-packages  registry.json
elm-test-rs-tests/: elm.json
elm-test-rs-tests/pre-existing-elm-projects/NoRedInk-elm-json-decode-pipeline/: elm.json
elm-test-rs-tests/pre-existing-elm-projects/NoRedInk-elm-json-decode-pipeline/tests/: Tests.elm
elm-test-rs-tests/pre-existing-elm-projects/avh4-elm-color/: .gitignore  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  elm.json  package.json
elm-test-rs-tests/pre-existing-elm-projects/avh4-elm-color/data/CssHslReference/: .gitignore  Dockerfile  build.sh  hsl-to-rgb.abc  shasum.txt
elm-test-rs-tests/pre-existing-elm-projects/avh4-elm-color/example/: .gitignore  Main.elm  elm.json
elm-test-rs-tests/pre-existing-elm-projects/avh4-elm-color/src/: Color.elm
elm-test-rs-tests/pre-existing-elm-projects/avh4-elm-color/tests/: ColorTest.elm  CssHslReference.elm  CssHslReferenceData.elm
elm-test-rs-tests/pre-existing-elm-projects/elm-core-tests/: elm.json
elm-test-rs-tests/pre-existing-elm-projects/elm-core-tests/tests/: Main.elm
elm-test-rs-tests/pre-existing-elm-projects/mdgriffith-elm-ui/: elm.json
elm-test-rs-tests/pre-existing-elm-projects/mdgriffith-elm-ui/experiments/font-adjustment/: FontAdjustment.elm
elm-test-rs-tests/pre-existing-elm-projects/rtfeldman-elm-css/: elm.json
elm-test-rs-tests/pre-existing-elm-projects/rtfeldman-elm-css/tests/: Tests.elm
elm-test-rs-tests/src/: AnotherBadClosure.elm  BadOccursCheck.elm  TCOMiscompilation0.elm  TCOMiscompilation1.elm  TCOMiscompilation2.elm  TCOMiscompilation3.elm  TCOMiscompilation4.elm  TCOProducesBadClosures.elm
elm-test-rs-tests/tests/: Tests.elm
installers/npm/: .gitignore  binary.js  package.json
reactor/src/: Deps.elm
roadmap/: ROADMAP_SPRING_SUMMER_2024.md
runtime-benchmarks/core/: README.md  runner.js
runtime-benchmarks/core/V8/Benchmark/Runner/: Json.elm
runtime-benchmarks/src/: BenchmarkRunner.elm
sscces/src/: TCOProducesBadClosures.elm
terminal/impl/Terminal/: Helpers.hs  Internal.hs
terminal/src/: Bump.hs  Develop.hs  Diff.hs  Init.hs  Install.hs  Main.hs  Make.hs  Publish.hs  Repl.hs
terminal/src/Develop/: StaticFiles.hs
terminal/src/Develop/StaticFiles/: Build.hs
tests/: TestMain.hs
worker/: elm.cabal
worker/src/: Artifacts.hs
