cabal-version:       3.4

name:                myPackage
version:             1.0.0.0
synopsis:            Haskell Server
description:
category:            Web
build-type:          Simple

Common myPackage-common
  exposed-modules:     Main
  other-modules:      
  build-depends:       base >= 4.7 && < 5,
                       aeson,
                       text,
                       containers,
                       transformers,
                       scotty,
                       wai,
                       wai-extra,
                       warp,
                       sqlite-simple,
                       bytestring,
                       http-conduit,
                       http-types
  hs-source-dirs:      src
  default-language:    Haskell2010

Executable myPackage
  import:              myPackage-common
  main-is:             Main.hs
  hs-source-dirs:      src
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
